<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zhutao.medrms</groupId>
    <artifactId>med-rms-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Med-RMS Parent</name>
    <description>医疗器械全生命周期需求管理系统 - 父模块</description>

    <modules>
        <module>med-rms-common</module>
        <module>med-rms-requirement</module>
        <module>med-rms-traceability</module>
        <module>med-rms-compliance</module>
        <module>med-rms-esignature</module>
        <module>med-rms-change</module>
        <module>med-rms-risk</module>
        <module>med-rms-project</module>
        <module>med-rms-notification</module>
        <module>med-rms-admin</module>
        <module>med-rms-web</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.3.5</spring-boot.version>
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <springdoc.version>2.6.0</springdoc.version>
        <jwt.version>0.12.6</jwt.version>
        <commons-lang3.version>3.17.0</commons-lang3.version>
        <fastjson2.version>2.0.52</fastjson2.version>
        <hutool.version>5.8.31</hutool.version>
        <jacoco.version>0.8.12</jacoco.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-requirement</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-traceability</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-compliance</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-esignature</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-change</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-risk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-project</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhutao.medrms</groupId>
                <artifactId>med-rms-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-test</artifactId>
                <version>6.4.0</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>2.2.224</version>
            </dependency>
            <dependency>
                <groupId>dev.samstevens.totp</groupId>
                <artifactId>totp</artifactId>
                <version>1.7.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>
</project>